--- a/grid.html
+++ b/grid.html
@@ -27,6 +27,11 @@
       <div> СОНАЧИНО САДОМЕ </div>
       <div> To Be Continued </div>
   </nav>
-  <div class="siteAds"></div>
+  <div class="siteAds">
+    <img src="1.jpg" width="240" height="200" alt="">
+    <img src="2.jpg" width="240" height="200" alt="">
+    <img src="3.jpg" width="240" height="200" alt="">
+    <img src="4.jpg" width="240" height="200" alt="">
+  </div>
   <footer class="pageFooter">Footer</footer>
 </body>
