--- a/grid.html
+++ b/grid.html
@@ -33,5 +33,7 @@
     <img src="3.jpg" width="240" height="200" alt="">
     <img src="4.jpg" width="240" height="200" alt="">
   </div>
-  <footer class="pageFooter">Footer</footer>
+  <footer class="pageFooter">
+    <p class="fot"> Лазаренко Николай 2015 </p>
+  </footer>
 </body>
